added call setup

--- a/src/app/dairy/components/dairy/dairy.component.html
+++ b/src/app/dairy/components/dairy/dairy.component.html
@@ -29,7 +29,7 @@
             </div>
             <div class=" row justify-content-center icons g-0">
                 <div class="col-3">
-                    <div href="tel:8521971929"><img src="../../../assets/icons/phone-call.svg"></div>
+                    <a href="{{'tel:' + dairy_data.user_phone_number}}"><img src="../../../assets/icons/phone-call.svg"></a>
                 </div>
                 <div class="col-3">
                     <div><img src="../../../assets/icons/whats-app.svg"></div>
