--- a/src/app/shared/components/header-bar/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component.html
@@ -9,8 +9,10 @@
       </div>
     </div>
     <div class="col-4 col-xs-4 col-sm-6 m-top-p-right">
-      <div class="chat-button" href="tel:8521971929">
-        Call
+      <div class="chat-button">
+        <a href="tel:8521971929">
+          Call
+        </a>
       </div>
       <div class="chat-button">
         Chat
