--- a/src/app/shared/components/header-bar/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component.html
@@ -15,6 +15,7 @@
         </a>
       </div>
       <div class="chat-button">
+          <jjva-ngx-whatsapp-button [ngx_whatsapp_phone]="phone" [ngx_whatsapp_text]="title"></jjva-ngx-whatsapp-button>
         Chat
       </div>
     </div>
