--- a/src/app/dairy/components/cattle/cattle.component.scss
+++ b/src/app/dairy/components/cattle/cattle.component.scss
@@ -153,7 +153,40 @@ font-style: normal;
 font-weight: 400;
 font-size: 10px;
 line-height: 14px;
-text-align: start;
+text-align: stat;
 color: #444444;
 margin-top: 2px;
 }
+.whatsapp-msg{
+    font-family: 'Noto Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 14px;
+text-align: start;
+color: #444444;
+margin-top: 2rem;
+
+}
+.whatsapp-cattle{
+    position: relative;
+    ::ng-deep {
+        .ngx-whatsapp-button-float{
+            position: absolute !important;
+            width: 32px !important;
+            height: 32px !important;
+            right: 14px !important;
+            /* box-shadow: 2px 2px 3px #999; */
+            background-color: #25d366 ;
+            top: 0rem;
+            div{
+                margin-top: -5% !important;
+            }
+        
+        }
+        .fa-2x{
+            font-size: 1.4em;
+        }   
+    }
+}
+
