--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -42,6 +42,29 @@
     text-decoration: none;
     color: #ffffff;
   }
+    ::ng-deep {
+      .ngx-whatsapp-button-float{
+          position: absolute !important;
+          width: 72px !important;
+          height: 37px !important;
+          right: 37px !important;
+          background-color:transparent !important;
+          box-shadow: none !important;
+          top: 4rem;
+          div{
+              margin-top: 12% !important;
+          }
+      
+      }
+      .ngx-whatsapp-button-my-float{
+        display: none;
+      }
+      .fa-2x{
+          font-size: 1.4em;
+      }
+      
+    }
+
 }
 .row-no-margin {
   margin-left: 0px;
