--- a/src/app/shared/components/header-bar/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-6 col-xs-6 col-sm-6 head-margin">
-      <div class="head">
+      <a class="head" href="/#">
         भैंसवाला
-      </div>
+      </a>
       <div class="head-schema">
         स्वस्थ पशु, सही दाम
       </div>
