--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -9,6 +9,7 @@
   line-height: 49px;
   text-align: left;
   color: #1bbf5d;
+  text-decoration: none;
 }
 .head-schema {
   font-family: "Noto Sans";
